# ChessTools

./: .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h  engine_benchmark.cpp  engine_benchmark.h  main.cpp  perft_benchmark.cpp  perft_benchmark.h
benchmark/data/: perft-bench.epd  perft-quick.epd  perft-suite.epd
benchmark/src/: benchmark.cpp  engine_benchmark.cpp  engine_benchmark.h  main.cpp  perft_benchmark.cpp  perft_benchmark.h
bitmap_tool/: CMakeLists.txt  bitmap_tool.cpp
chess_game/: CMakeLists.txt  commands.cpp  commands.h  context.h  main.cpp  user_io.cpp  user_io.h
fen_display/: CMakeLists.txt  fen_display.cpp
legal_moves_in_position_tool/: CMakeLists.txt  legal_moves_tool.cpp
magic_bitboard_generator/: CMakeLists.txt  database.cpp  database.h  magic_bitboard.cpp  magic_bitboard.h  main.cpp
perft/: CMakeLists.txt  main.cpp  perft-suite.epd  perft.cpp  perft.h  reporter.h  suite.cpp  suite.h
pgn_parser/: CMakeLists.txt  pgn_parser.cpp
table_generator/: CMakeLists.txt  bigmap.cpp  bigmap.h  dimensions.h  main.cpp  patterns.cpp  patterns.h  table_gen.cpp  table_gen.h
test_game_filter/: CMakeLists.txt  main.cpp
